--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: [20.x, 18.x]
 
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       - name: Testing on Node.js version ${{matrix.node-version}}
         uses: actions/setup-node@v1
         with:
