--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@trpc/next": "^11.0.0-next-beta.228",
     "@trpc/react-query": "^11.0.0-next-beta.228",
     "@trpc/server": "^11.0.0-next-beta.228",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.2.1",
     "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
