--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/server": "^11.0.0-next-beta.228",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
+    "mongoose": "^8.1.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
