--- a/package.json
+++ b/package.json
@@ -1,44 +1,48 @@
 {
-  "name": "acs-home",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.17.19",
-    "@trpc/client": "^11.0.0-next-beta.228",
-    "@trpc/next": "^11.0.0-next-beta.228",
-    "@trpc/react-query": "^11.0.0-next-beta.228",
-    "@trpc/server": "^11.0.0-next-beta.228",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.5",
-    "mongoose": "^8.1.3",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.2.1",
-    "ts-node": "^10.9.2",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.3.0",
-    "@testing-library/react": "^14.1.2",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+    "name": "acs-home",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@tanstack/react-query": "^5.17.19",
+        "@trpc/client": "^11.0.0-next-beta.228",
+        "@trpc/next": "^11.0.0-next-beta.228",
+        "@trpc/react-query": "^11.0.0-next-beta.228",
+        "@trpc/server": "^11.0.0-next-beta.228",
+        "bcrypt": "^5.1.1",
+        "clsx": "^2.1.0",
+        "dotenv": "^16.4.5",
+        "framer-motion": "^11.0.5",
+        "mongoose": "^8.1.3",
+        "next": "14.1.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-router-dom": "^6.22.1",
+        "tailwind-merge": "^2.2.1",
+        "ts-node": "^10.9.2",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^6.3.0",
+        "@testing-library/react": "^14.1.2",
+        "@types/bcrypt": "^5.0.2",
+        "@types/jest": "^29.5.11",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "postcss": "^8",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    }
 }
