--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
-        "dotenv": "^16.4.5",
         "cmdk": "^0.2.1",
+        "cookies-next": "^4.1.1",
         "date-fns": "^3.3.1",
+        "dotenv": "^16.4.5",
         "framer-motion": "^11.0.5",
-        "mongoose": "^8.1.3",
+        "jose": "^5.2.2",
+        "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.336.0",
+        "mongoose": "^8.1.3",
         "next": "14.1.0",
+        "next-client-cookies": "^1.1.0",
         "react": "^18",
+        "react-cookie": "^7.1.0",
         "react-day-picker": "^8.10.0",
         "react-dom": "^18",
         "react-router-dom": "^6.22.1",
@@ -44,6 +49,7 @@
         "@testing-library/react": "^14.1.2",
         "@types/bcrypt": "^5.0.2",
         "@types/jest": "^29.5.11",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
