--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "test": "jest"
     },
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/themes": "^2.0.3",
+        "@tailwindcss/line-clamp": "^0.4.4",
         "@tanstack/react-query": "^5.17.19",
         "@trpc/client": "^11.0.0-next-beta.228",
         "@trpc/next": "^11.0.0-next-beta.228",
@@ -23,13 +25,16 @@
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
-        "dotenv": "^16.4.5",
         "cmdk": "^0.2.1",
         "date-fns": "^3.3.1",
+        "dotenv": "^16.4.5",
+        "embla-carousel": "^8.0.0",
+        "embla-carousel-react": "^8.0.0",
         "framer-motion": "^11.0.5",
-        "mongoose": "^8.1.3",
         "lucide-react": "^0.336.0",
+        "mongoose": "^8.1.3",
         "next": "14.1.0",
+        "octokit": "^3.1.2",
         "react": "^18",
         "react-day-picker": "^8.10.0",
         "react-dom": "^18",
