--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "mongoose": "^8.1.3",
         "next": "14.1.0",
         "next-client-cookies": "^1.1.0",
+        "node-pre-gyp": "^0.17.0",
         "react": "^18",
         "react-day-picker": "^8.10.0",
         "react-dom": "^18",
@@ -54,6 +55,7 @@
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
+        "html-loader": "^5.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8",
