--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DISCORD_CLIENT_ID = "1209447978096656445"
-DISCORD_CLIENT_SECRET = "56_Y6SOBBlgTMOD3g3tSrS7MBWHCpR2O"
-DISCORD_REDIRECT_URI = "http://localhost:3000/auth/discord/callback"
-DISCORD_API = "https://discord.com/api/oauth2/authorize?client_id=1209447978096656445&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fauth%2Fdiscord%2Fcallback&scope=identify+guilds+email"
-MONGO_URI = "mongodb+srv://betteracs:bettercrew65!@cluster0.xo1dvti.mongodb.net/?retryWrites=true&w=majority"
+DISCORD_CLIENT_ID = ""
+DISCORD_CLIENT_SECRET = ""
+DISCORD_REDIRECT_URI = ""
+DISCORD_API = ""
+MONGO_URI = ""
