--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
         "cmdk": "^0.2.1",
         "date-fns": "^3.3.1",
         "dotenv": "^16.4.5",
+        "embla-carousel": "^8.0.0",
+        "embla-carousel-react": "^8.1.3",
         "framer-motion": "^11.0.5",
         "jose": "^5.2.2",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.336.0",
         "mongoose": "^8.1.3",
-        "next": "14.1.0",
+        "next": "^14.2.3",
         "next-client-cookies": "^1.1.0",
         "node-pre-gyp": "^0.17.0",
+        "octokit": "^4.0.2",
         "react": "^18",
         "react-day-picker": "^8.10.0",
         "react-dom": "^18",
