--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tooltip": "^1.0.7",
         "@radix-ui/themes": "^2.0.3",
+        "@tabler/icons-react": "^3.5.0",
         "@tailwindcss/line-clamp": "^0.4.4",
         "@tanstack/react-query": "^5.17.19",
         "@trpc/client": "^11.0.0-next-beta.228",
