--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "react-day-picker": "^8.10.0",
         "react-dom": "^18",
         "react-router-dom": "^6.22.1",
+        "sweetalert2": "^11.11.1",
         "tailwind-merge": "^2.2.1",
         "tailwindcss-animate": "^1.0.7",
         "ts-node": "^10.9.2",
